--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">DeleteItemsRecyclerView</string>
 
 
-    <string name="delete"> Delete </string>
+    <string name="delete"> DELETE </string>
 </resources>
